<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dip"
                android:background="@drawable/linearlayoutfields_border">

                <TextView
                    style="@style/generalTextViewStyle"
                    android:text="@string/email_id" />

                <EditText
                    android:id="@+id/userNameEditTextID"
                    style="@style/generalEditTextStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dip"
                android:background="@drawable/linearlayoutfields_border">

                <TextView
                    style="@style/generalTextViewStyle"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passwordEditTextID"
                    style="@style/generalEditTextStyle"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/sign_up_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_txtview_txt"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_top_margin_ten"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/loginBtnID"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="5"
                    android:background="@drawable/custom_button"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelBtnID"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="5"
                    android:background="@drawable/custom_button"
                    android:text="@string/cancel_text"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
