<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmyprofiles"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dip"
                android:background="@drawable/linearlayoutfields_border">

                <TextView
                    style="@style/generalTextViewStyle"
                    android:text="@string/email_id" />

                <EditText
                    android:id="@+id/userNameEditTextID"
                    style="@style/generalEditTextStyle" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dip"
                android:background="@drawable/linearlayoutfields_border">

                <TextView

                    style="@style/generalTextViewStyle"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passwordEditTextID"
                    style="@style/generalEditTextStyle"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dip"
                android:background="@drawable/linearlayoutfields_border">

                <TextView

                    style="@style/generalTextViewStyle"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/confirmPasswordEditTextID"
                    style="@style/generalEditTextStyle"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_top_margin_ten"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/submitBtnID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="5"
                    android:background="@drawable/custom_button"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelBtnID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="5"
                    android:background="@drawable/custom_button"
                    android:text="@string/cancel_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
