<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmyprofiles"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/generalTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/check_email_txtview_string"
                android:textColor="@color/white"
                android:background="#15000000"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/linearlayoutfields_border">

                <TextView
                    style="@style/generalTextViewStyle"
                    android:text="@string/inputregcode" />

                <EditText
                    android:id="@+id/inputRegCodeEditText"
                    style="@style/generalEditTextStyle"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_top_margin_ten"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/submitBtnID"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip"
                    android:layout_weight="5"
                    android:background="@drawable/custom_button"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelBtnID"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_weight="5"
                    android:background="@drawable/custom_button"
                    android:text="@string/cancel_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
